# dzinza

./: .env.backup  .env.development  .env.example  .env.production  .gitignore  .secrets.baseline  AGENTS.md  AVATAR_SYSTEM_TEST_RESULTS.md  CHANGELOG.md  CHILDREN_CENTERING_IMPROVEMENTS.md  CONNECTION_LINE_ALIGNMENT.md  DARK_MODE_COMPLETE.md  DARK_MODE_IMPLEMENTATION.md  DATABASE_MIGRATION_ASSESSMENT.md  DATABASE_MIGRATION_SUMMARY.md  DATABASE_PERSISTENCE_ANSWER.md  DATABASE_SCHEMA_FIX_COMPLETE.md  DATA_MODELS.md  DOCKER_ENVIRONMENT_STATUS.md  ELASTICSEARCH_HEALTH_EXPLANATION.md  ESLINT_CONSOLIDATION_SUMMARY.md  FAMILY_MEMBER_UPDATE_FIX.md  FAMILY_TREE_DARK_MODE_COMPLETE.md  FLEXIBLE_NAME_VALIDATION.md  GEMINI.md  JULES_TASKS.md  KUBERNETES_MIGRATION_SUMMARY.md  LICENSE  MODERN_FAMILY_TREE.md  PLAN.md  PRD.md  README.md  ROADMAP.md  VISUAL_FAMILY_TREE_FEATURES.md  WORKFLOW_REVIEW.md  babel.config.cjs  cleanup_node_artifacts.sh  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.yml  (+17 more)
auth-service/: .env.development  .env.example  Dockerfile  README.md  SESSION_MANAGEMENT.md  alembic.ini  eslint.config.js  jest.config.js  main.py  package.json  pyproject.toml  requirements.txt  tsconfig.json
auth-service/alembic/versions/: .gitkeep  0001_initial_schema_setup.py
auth-service/app/: __init__.py  config.py  crud.py  database.py  dependencies.py  jwt_utils_patch.py  main.py  model_patches.py  models.py  patch_initializer.py  patches.py  refresh_endpoint_patch.py  refresh_patches.py  register_endpoint_patch.py  register_patches.py  schemas.py  schemas.py.fixed  session_manager.py  user_role_patch.py  user_role_patch.py.fixed  utils.py
auth-service/app/api_v1/: api.py
auth-service/app/core/: config.py  security.py
auth-service/app/crud/: token_crud.py  user_crud.py
auth-service/app/dependencies/: auth.py
auth-service/app/middleware/: error_handler.py  rate_limiter.py
auth-service/app/routes/: auth.py
auth-service/app/schemas/: __init__.py
auth-service/app/tests/: __init__.py  test_api.py  test_session_manager.py
auth-service/app/utils/: metrics.py  tracing.py
auth-service/config/: database.py  redis.py
auth-service/models/: audit_log.py  refresh_token.py  user.py
auth-service/routes/: auth.py
auth-service/src/: healthcheck.js  server.ts
auth-service/src/__tests__/: auth.test.ts  setup.ts
auth-service/src/config/: database.ts  passport.ts  redis.ts
auth-service/src/middleware/: authMiddleware.ts  errorHandler.ts  rateLimitByEmail.ts  rbacMiddleware.ts  validation.ts
auth-service/src/models/: AuditLog.ts  RefreshToken.ts  SiteSetting.ts  User.ts
auth-service/src/routes/: admin.ts  adminAnalyticsRoutes.ts  adminHealthRoutes.ts  adminSettingsRoutes.test.ts  adminUserRoutes.test.ts  adminUserRoutes.ts  auth.ts  healthRoutes.ts  mfa.ts  password.ts  socialAuth.ts
auth-service/src/utils/: email.ts  jwt.ts  logger.ts  metrics.ts  socialAuthHandler.ts  tracing.ts
auth-service/tests/: jest.setup.ts  test_session_manager.py
auth-service/tests/integration/: admin.routes.test.ts
auth-service/utils/: jwt.py  jwt_utils.py  password.py
backend-service/: .env.example  .eslintrc.js  Dockerfile  docker-compose.yml  eslint.config.js  healthcheck.js  jest.config.js  jest.config.json  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend-service/app/: __init__.py  dependencies.py  main.py
backend-service/app/api/: __init__.py
backend-service/app/core/: __init__.py  config.py
backend-service/app/middleware/: __init__.py  auth.py  rate_limiter.py
backend-service/app/routes/: __init__.py
backend-service/app/services/: __init__.py  proxy.py  proxy_service.py
backend-service/app/utils/: metrics.py
backend-service/config/: services.conf
backend-service/scripts/: mongo-init.js
backend-service/services/gateway/: Dockerfile  package.json
backend-service/shared/middleware/: adminAuth.ts  auth.d.ts  auth.d.ts.map  auth.js  auth.js.map  auth.ts  errorHandler.js  errorHandler.js.map
backend-service/shared/utils/: logger.js.map  logger.ts
backend-service/src/: server.js  server.ts
backend-service/src/config/: database.js  database.ts  migrations.js  migrations.ts  swagger.js  swagger.ts
backend-service/src/routes/: auth.js  auth.ts  genealogy.ts  health.js  health.ts  notifications.ts
backend-service/src/utils/: tracing.js  tracing.ts
backend-service/tests/: __init__.py  setup.ts
backend-service/tests/routes/: health.test.ts
storage-service/: .dockerignore  .env.example  Dockerfile  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
storage-service/app/: api.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py
storage-service/app/api/: __init__.py
storage-service/app/core/: __init__.py
storage-service/app/crud/: file_metadata_crud.py
storage-service/app/endpoints/: files.py
storage-service/app/middleware/: __init__.py  auth_middleware.py
storage-service/app/models/: file_metadata_model.py
storage-service/app/schemas/: file_schema.py
storage-service/app/services/: cleanup_service.py  image_processor_service.py  s3_service.py
storage-service/app/utils/: __init__.py  metrics.py  tracing.py
storage-service/src/: healthcheck.js  server.ts
storage-service/src/__tests__/: simple.test.ts
storage-service/src/models/: File.ts  StorageUsage.ts  index.ts
storage-service/src/routes/: admin.ts  files.ts  (+1 more)
storage-service/tests/: test_api.py  test_crud.py
(+1187 files in other folders)
