[tool.poetry]
name = "storage-service"
version = "0.1.0"
description = "Storage Service for Dzinza Platform"
authors = ["Dzinza AI Migration Team <ai@dzinza.com>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pytest = ">=7.0.0"
pytest-asyncio = ">=0.20.0" # For async tests

# Ruff configuration
[tool.ruff]
line-length = 99
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"] # Pyflakes, pycodestyle errors, pycodestyle warnings
ignore = ["E501"]
# per-file-ignores = { "__init__.py" = ["F401"] }

exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
    ".pants.d", ".ruff_cache", ".svn", ".tox", ".venv", "__pypackages__",
    "_build", "buck-out", "build", "dist", "node_modules", "venv",
    "*/migrations/*",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
